  updated the documentation to reflect the new version requirement.
+ Updated the default ArqSeqGiveUp to 512 since with the current encryption
  scheme a single missed packet can have greater ramifications then under the
  previous one.
+ Removed some extraneous command line options.
+ Removed some more cruft from ShowEQParams.

dohpaZ (12/7/03)
---------------------
+ Updated version to 5.0.0.1
+ OPCode and structure fixes for 11/05/03 patch.
+ Some minor optimization of door spawn handling.
+ Added zone safepoint support to ZoneMgr
+ Some dependency cleanups.
+ Fix to support people running EQ under winex.
+ Added support for user configurable map icons (spawns, pc's, items, etc...)
+ Added support for rescaling the Z for a whole map to allow migration of 
  old/borked maps.
+ Added minimal support for importing maps (warning, this imports everything,
  so if not importing other SOE layers you will probably end up with duplicate
  lines, points, etc...).
+ Support for direct loading of SOE txt format map files.
+ Slight improvement in map loading speeds.
+ Added zone point destination information to map tooltip for teleport doors.
+ New message storage.
+ New message filtering system.
+ Entirely new message window, with greatly enhanced functionality.
+ Got rid of the old MsgDialog classes
+ Move terminal UI to its own class
+ Added diagnostic message functions to unify how certain messages were 
  being handled.  The message output is now included with the rest of the 
  text messages.
+ Moved eqstr_{}.txt handling to its own class.
+ Added Proper seperation of user data from distributed program data.
 + Support .showeq directory
 + Moved maps, filters, spawnpoints, and logs to their own subdirectories.
+ Switch to using QRegExp for filter pattern matching.
+ Major cleanup/revamp of Filter handling (stage 1), filters are now stored in 
  their own sub-directories, and now uses an XML format.